packages/errors/test/__snapshots__/EXPERIMENTAL_ORIGIN_DEPENDENCIES_E2E_ONLY.ansi
[31mThe [33mexperimentalOriginDependencies[39m[31m experiment is currently only supported for End to End Testing and must be configured as an e2e testing type property: [95me2e.experimentalOriginDependencies[39m[31m.[39m
[31m[39m
[31m[94m{[39m[31m[39m
[31m[94m  e2e: {[39m[31m[39m
[31m[94m    experimentalOriginDependencies: true[39m[31m[39m
[31m[94m  },[39m[31m[39m
[31m[94m}[39m[31m[39m